--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6649,10 +6649,15 @@ display: inline-block;
 }
 
 .cart-list-ul li img {
-width: 50px;
-height: 50px;
+  width: 50px;
+  height: 50px;
   
   }
+.icon{
+  width: 20px !important;
+  height: 20px !important;
+}
+
   .remove {
     font-size: 25px;
     color: #e31e25 !important;
