--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2137,7 +2137,7 @@ p.header-widget-phone {
 #about-3 {
  position: relative;
  margin-top: -25px;
- z-index: 99;
+
 }
 
 
@@ -6970,5 +6970,44 @@ font-weight: 500;
     background: #2341840d;
     padding: 10px;
     box-shadow: 0px 0px 10px #2341843d;
+}
+
+
+
+
+
+/* modal */
+
+
+
+
+
+.modal-body{
+
+  background-color: black;
+}
+
+
+
+.intro-1{
+
+  font-size: 16px;
+}
+
+.close{
+
+  color: #fff;
+}
+
+
+.close:hover{
+
+  color: #fff;
+}
+
+
+.intro-2{
+
+  font-size: 13px;
 }
   
